# vds-jointcall

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vds-from-gvcf.py  vds-to-mt.py  vds_test.sh
.githooks/: pre-commit
