[project]
name = "vds-jointcall"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hail>=0.2.136",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.14.0",
    "shellcheck-py>=0.11.0.1",
    "ty>=0.0.34",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "PTH",
    "RUF",
]

[tool.ty.environment]
python-version = "3.12"
